[package]
name = "seed-encrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrypt = { version = "0.10.0", default-features = false, features = ["simple"] }
password-hash = "0.4.2"
rand = "0.8.5"
base64 = " 0.13.0"
libaes = "0.6.3"
serde = "1.0.144"
serde_json="1.0.85"